--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
             Notification.requestPermission();
         }
         else{
-            var notificacao = new Notification("Teste", {
+            var notificacao = new Notification("Alguém abriu um novo apontamento", {
                 icon : 'http://cdn.sstatic.net/stackexchange/img/logos/so/so-icon.png',
-                body : "Apontamentos"
+                body : "Elite Consultores"
 
             });
 
