--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             Notification.requestPermission();
         }
         else{
-            var notificacao = new Notification("Alguém abriu um novo apontamento", {
+            var notificacao = new Notification("Alguém abriu um novo apontamento xD", {
                 icon : 'http://cdn.sstatic.net/stackexchange/img/logos/so/so-icon.png',
                 body : "Elite Consultores"
 
