--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
                 body : "Elite Consultores"
 
             });
-
+            notificacao.onclick = function(){
                 window.open('https://eliteconsultores.app/Apontamentos/Historico?idApontamento=8023');
-
+                };
         }
     }
     minhaNotificacao();
