--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
             Notification.requestPermission();
         }
         else{
-            var notificacao = new Notification("Alguém abriu um novo apontamento xD", {
+            var notificacao = new Notification("APONTAMENTO 8830 - Alguém abriu um novo apontamento xD", {
                 icon : 'http://cdn.sstatic.net/stackexchange/img/logos/so/so-icon.png',
                 body : "Elite Consultores"
 
             });
             notificacao.onclick = function(){
-                window.open('https://eliteconsultores.app/Apontamentos/Historico?idApontamento=8023');
+                window.open('https://eliteconsultores.app/Apontamentos/Historico?idApontamento=8830');
                 };
         }
     }
